setup workspace nx

--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
-  "name": "Parking-app",
+  "name": "parking-app",
   "version": "1.0.0",
   "private": true,
+  "workspaces": {
+    "packages": [
+      "apps/*",
+      "libs/*"
+    ],
+    "nohoist": [
+      "**/@nestjs",
+      "**/@nestjs/**"
+    ]
+  },
   "scripts": {
     "format": "prettier  \"{apps,libs}/**/*.{ts,tsx,js,json}\" --ignore-path .gitignore",
     "format:check": "yarn format --check",
     "format:write": "yarn format --write",
-    "tsc": "yarn --parallel -r run tsc",
-    "lint": "yarn --parallel -r run lint",
-    "build": "yarn --parallel -r run build",
+    "tsc": "yarn nx run-many -t tsc",
+    "lint": "yarn nx run-many -t lint",
+    "build": "yarn nx run-many -t build",
     "validate": "yarn format:write && yarn tsc && yarn lint && yarn build",
     "prepare": "husky install"
   },
@@ -22,6 +32,7 @@
   "devDependencies": {
     "prettier": "^3.3.3",
     "typescript": "^5.6.3",
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "nx": "20.1.2"
   }
 }
