--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "next": "15.0.1"
+    "next": "15.0.1",
+    "@autospace/sample-lib": "*"
   },
   "devDependencies": {
     "typescript": "^5",
