--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "format:write": "pnpm format --write",
     "lint": "pnpm exec nx run-many --target=lint",
     "tsc": "pnpm exec nx run-many --target=tsc",
-    "validate": "pnpm format:write && pnpm tsc && pnpm lint",
+    "validate": "pnpm format:write  && pnpm lint",
     "prepare": "husky install"
   },
   "keywords": [],
